[package]
name = "MineBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
azalea = { git="https://github.com/mat-1/azalea" }
tokio = { version = "1", features = ["full"] }
parking_lot = { version = "0.12", features = ["nightly"] }
anyhow = "1.0.71"